[gd_scene load_steps=38 format=3 uid="uid://d31jtw2mvajga"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_126j0"]
[ext_resource type="Texture2D" uid="uid://duwt6sql3v7qp" path="res://Assets/Player_idle.png" id="2_faib3"]
[ext_resource type="Texture2D" uid="uid://cvlwybc1xix5t" path="res://Assets/Player_walking.png" id="3_yjv8t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e7ms2"]
atlas = ExtResource("2_faib3")
region = Rect2(0, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqq74"]
atlas = ExtResource("2_faib3")
region = Rect2(22, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhdna"]
atlas = ExtResource("2_faib3")
region = Rect2(44, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1wgn"]
atlas = ExtResource("2_faib3")
region = Rect2(66, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ic3h4"]
atlas = ExtResource("2_faib3")
region = Rect2(88, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5in81"]
atlas = ExtResource("2_faib3")
region = Rect2(110, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytf20"]
atlas = ExtResource("2_faib3")
region = Rect2(132, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ck18"]
atlas = ExtResource("2_faib3")
region = Rect2(154, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_qkhfr"]
atlas = ExtResource("2_faib3")
region = Rect2(176, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd4ev"]
atlas = ExtResource("2_faib3")
region = Rect2(198, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsmam"]
atlas = ExtResource("2_faib3")
region = Rect2(220, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxeto"]
atlas = ExtResource("2_faib3")
region = Rect2(242, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugba4"]
atlas = ExtResource("2_faib3")
region = Rect2(264, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_erfuf"]
atlas = ExtResource("2_faib3")
region = Rect2(286, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxj7y"]
atlas = ExtResource("2_faib3")
region = Rect2(308, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_edhtc"]
atlas = ExtResource("2_faib3")
region = Rect2(330, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_5b0dt"]
atlas = ExtResource("2_faib3")
region = Rect2(352, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx5os"]
atlas = ExtResource("2_faib3")
region = Rect2(374, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_84kyc"]
atlas = ExtResource("2_faib3")
region = Rect2(396, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_w5slr"]
atlas = ExtResource("2_faib3")
region = Rect2(418, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddmqc"]
atlas = ExtResource("3_yjv8t")
region = Rect2(132, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_clsd7"]
atlas = ExtResource("3_yjv8t")
region = Rect2(44, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_x27fh"]
atlas = ExtResource("3_yjv8t")
region = Rect2(110, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvlbi"]
atlas = ExtResource("3_yjv8t")
region = Rect2(0, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_xt1xh"]
atlas = ExtResource("3_yjv8t")
region = Rect2(22, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_vj3ya"]
atlas = ExtResource("3_yjv8t")
region = Rect2(44, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_twa7c"]
atlas = ExtResource("3_yjv8t")
region = Rect2(66, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqhdg"]
atlas = ExtResource("3_yjv8t")
region = Rect2(88, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5xkb"]
atlas = ExtResource("3_yjv8t")
region = Rect2(110, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_17qdw"]
atlas = ExtResource("3_yjv8t")
region = Rect2(132, 0, 22, 28)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx6pm"]
atlas = ExtResource("3_yjv8t")
region = Rect2(154, 0, 22, 28)

[sub_resource type="SpriteFrames" id="SpriteFrames_0mos2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7ms2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqq74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhdna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1wgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ic3h4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5in81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytf20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ck18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkhfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd4ev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsmam")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxeto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugba4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erfuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxj7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edhtc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5b0dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx5os")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84kyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w5slr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddmqc")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_clsd7")
}],
"loop": true,
"name": &"jump2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x27fh")
}],
"loop": true,
"name": &"sprint",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvlbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xt1xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vj3ya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twa7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqhdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5xkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17qdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx6pm")
}],
"loop": true,
"name": &"walking",
"speed": 15.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_oxyxl"]
radius = 5.0
height = 22.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xawdv"]
radius = 65.0077

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_126j0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5.96046e-08, -12)
sprite_frames = SubResource("SpriteFrames_0mos2")
animation = &"sprint"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_oxyxl")

[node name="MoveTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ObstacleRay2" type="RayCast2D" parent="."]
position = Vector2(0, -10)
target_position = Vector2(-30, 0)

[node name="ObstacleRay" type="RayCast2D" parent="."]
position = Vector2(0, -10)
target_position = Vector2(30, 0)

[node name="GroundRay" type="RayCast2D" parent="."]
position = Vector2(0, -10)

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("CircleShape2D_xawdv")

[connection signal="timeout" from="MoveTimer" to="." method="_on_move_timer_timeout"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_shape_entered" from="PlayerDetector" to="." method="_on_player_detector_body_shape_entered"]
